--- a/lesson.local/Lesson_2_3.html
+++ b/lesson.local/Lesson_2_3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Переменные и их типы</title>
 	<script>
 		"use strict";
 		var x; // устаревший вариант объявления переменной
