--- a/lesson.local/Lesson_2_4.html
+++ b/lesson.local/Lesson_2_4.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Константы</title>
 	<script>
 		"use script"
 		const PI = 3.1415926; // Number
