--- a/p5js YouTube SevenSegment Display/index.html
+++ b/p5js YouTube SevenSegment Display/index.html
@@ -12,7 +12,8 @@
 
   <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
-  <style> body { padding: 0; margin: 0; } </style>
+  <!-- <style> body { padding: 0; margin: 0; } </style> -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
