--- a/p5js YouTube/SevenSegment Display/index.html
+++ b/p5js YouTube/SevenSegment Display/index.html
@@ -6,7 +6,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="js/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+  <script language="javascript" type="text/javascript" src="js/SevenSegment.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
