--- a/lesson.local/Lesson_2_17.html
+++ b/lesson.local/Lesson_2_17.html
@@ -63,7 +63,7 @@
         console.log(arr[0][2]);
         for(let row in arr){
             for(let col in arr[row]){
-                console.log(`Элемент с индексом ${row}, ${col} равен ${arr[row][col]}`);
+                console.log(`Элемент с индексом ${row}, ${col} равен ${arr[row]}`);
             }
         }
     </script>
