--- a/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_4.html
+++ b/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_4.html
@@ -8,15 +8,19 @@
 	<script type="text/javascript">
 		"use strict";
 		let obj = {
-
-		}
+			z: 20,
+			n: 30
+		}; 
 
 		let z = Symbol();
 		let n = Symbol();
-		obj[z] = 20;
-		obj[n] = 30;
+		// obj[z] = 20;
+		// obj[n] = 30;
 
-		console.log(`свойство z и n ` + obj[z] + ` ` + obj[n]);
+		// console.log(`свойство z и n ` + obj[z] + ` ` + obj[n]);
+		console.log(obj.z);
+		console.log(obj.n);
+
 	</script>
 </head>
 
