--- a/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_5.html
+++ b/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_5.html
@@ -30,7 +30,8 @@
 			}
 
 			this.valueOf = function(){
-				return  rect.area();
+				// return  rect.area();
+				return this.area();
 			}
 
 		}
