--- a/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_7.html
+++ b/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_7.html
@@ -8,66 +8,118 @@
 	<script type="text/javascript">
 		"use strict";
 
+		// class Rectangle {
+
+		// 	constructor(x, y, h, w){
+		// 	this._x = x;
+		// 	this._y = y;
+		// 	this._h = h;
+		// 	this._w = w;
+		// 	}
+		// 	get h(){
+		// 		return this._h;
+		// 	}
+		// 	get w(){
+		// 		return this._w;
+		// 	}
+
+		// 	set h(coor){
+		// 		if (coor < 0) this._h = 0;
+		// 		else this._h = coor;
+		// 	}
+
+		// 	set w(coor){
+		// 		if (coor < 0) this._w = 0;
+		// 		else this._w = coor;
+		// 	}
+
+		// 	get s () {
+		// 		return this.h * this.w;
+		// 	}
+		// 	getCoordinate = function () {
+		// 		console.log(`Точка с координатами ${this._x} и ${this._y}`);
+		// 	}
+
+		// 	getDistance = function () {
+		// 		return Math.sqrt(this._x ** 2 + this._y ** 2);
+		// 	}
+
+		// 	toString = function(){
+		// 		return `Прямоугольник с координатами (${this._x}; ${this._y}) шириной ${this.w} и высотой ${this.h}`;
+		// 	}
+		// 	valueOf = function(){
+		// 		return  rect.s;
+		// 	}
+		// }
+
+		// let rect = new Rectangle(10, 20, 200, 300);
+		// console.log(rect);
+		// console.log(rect.s);
+		// console.log(rect.getCoordinate());
+		// console.log(rect.getDistance());
+		// console.log(rect.toString());
+		// console.log(rect.valueOf());
+
+		// console.log(`---------------`);
+
+
+		// rect.h = -250;
+		// console.log(rect.h);
+		// rect.w = -500;
+		// console.log(rect.w);
+
 		class Rectangle {
 
-			constructor(x, y, h, w){
-			this._x = x;
-			this._y = y;
-			this._h = h;
-			this._w = w;
+			constructor(x, y, h, w) {
+				this.x = x;
+				this.y = y;
+				this._h = h;
+				this._w = w;
 			}
-			get h(){
+
+			get area() {
+				return this.h * this.w;
+			}
+
+			get h() {
 				return this._h;
 			}
-			get w(){
+			get w() {
 				return this._w;
 			}
 
-			set h(coor){
-				if (coor < 0) this._h = 0;
-				else this._h = coor;
+			set h(h) {
+				if (h < 0) throw new Error('Высота отрицательная');
+				else this._h = h;
 			}
 
-			set w(coor){
-				if (coor < 0) this._w = 0;
-				else this._w = coor;
+			set w(w) {
+				if (w < 0) throw new Error('Высота отрицательная');
 			}
 
-			get s () {
-				return this.h * this.w;
+			// getCoordinate() {
+			// 	console.log(`Точка с координатами ${this.x} и ${this.y}`);
+			// }
+			// getDistance() {
+			// 	return Math.sqrt(this.x ** 2 + this.y ** 2);
+			// }
+			toString() {
+				return `Прямоугольник с координатами (${this.x}; ${this.y}) шириной ${this.w} и высотой ${this.h}`;
 			}
-			getCoordinate = function () {
-				console.log(`Точка с координатами ${this._x} и ${this._y}`);
-			}
-
-			getDistance = function () {
-				return Math.sqrt(this._x ** 2 + this._y ** 2);
-			}
-
-			toString = function(){
-				return `Прямоугольник с координатами (${this._x}; ${this._y}) шириной ${this.w} и высотой ${this.h}`;
-			}
-			valueOf = function(){
-				return  rect.s;
+			valueOf() {
+				return rect.getArea();
 			}
 		}
-
 		let rect = new Rectangle(10, 20, 200, 300);
-		console.log(rect);
-		console.log(rect.s);
-		console.log(rect.getCoordinate());
-		console.log(rect.getDistance());
-		console.log(rect.toString());
-		console.log(rect.valueOf());
-		
-		console.log(`---------------`);
+		// alert(rect.getArea);
+		console.log(rect.area);
 
-
-		rect.h = -250;
-		console.log(rect.h);
-		rect.w = -500;
+		// rect.w = -20;
+		// rect.h = -20;
+		rect.w = 20;
+		rect.h = 50;
 		console.log(rect.w);
-
+		console.log(rect.h);
 	</script>
 </head>
 
