--- a/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_8.html
+++ b/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_8.html
@@ -13,12 +13,17 @@
 			static counter = 0;
 
 			constructor(x, y, h, w) {
-				this._x = x;
-				this._y = y;
+				this.x = x;
+				this.y = y;
 				this._h = h;
-				this._w = w;
-				Rectangle.counter++;
+				this._w = w;//обращение к объекту
+				Rectangle.counter++;//обращение к классу
 			}
+
+			static getCounter() {
+				return Rectangle.counter;
+			}
+
 			get h() {
 				return this._h;
 			}
@@ -26,41 +31,46 @@
 				return this._w;
 			}
 
-			set h(coor) {
-				if (coor < 0) this._h = 0;
-				else this._h = coor;
+			set h(h) {
+				if (h < 0) throw new Error('Высота отрицательная');
+				else this._h = h;
 			}
 
-			set w(coor) {
-				if (coor < 0) this._w = 0;
-				else this._w = coor;
+			set w(w) {
+				if (w < 0) throw new Error('Высота отрицательная');
+				else this._w = w;
 			}
 
-			get s() {
+			get area() {
 				return this.h * this.w;
 			}
-			getCoordinate = function () {
-				console.log(`Точка с координатами ${this._x} и ${this._y}`);
-			}
+			// getCoordinate = function () {
+			// 	console.log(`Точка с координатами ${this._x} и ${this._y}`);
+			// }
 
-			getDistance = function () {
-				return Math.sqrt(this._x ** 2 + this._y ** 2);
-			}
+			// getDistance = function () {
+			// 	return Math.sqrt(this._x ** 2 + this._y ** 2);
+			// }
 
 			toString = function () {
 				return `Прямоугольник с координатами (${this._x}; ${this._y}) шириной ${this.w} и высотой ${this.h}`;
 			}
 			valueOf = function () {
-				return rect.s;
+				return rect.area;
 			}
 		}
 
-		console.log(Rectangle.counter);
-		let rect = new Rectangle(10, 20, 200, 300);
-		let rect1 = new Rectangle(15, 25, 250, 350);
-		let rect2 = new Rectangle(20, 30, 300, 400);
-		console.log(Rectangle.counter);
-	</script>
+		// console.log(Rectangle.counter);
+		console.log(Rectangle.getCounter());
+		// let rect = new Rectangle(10, 20, 200, 300);
+		// let rect1 = new Rectangle(15, 25, 250, 350);
+		// let rect2 = new Rectangle(20, 30, 300, 400);
+		new Rectangle(10, 20, 200, 300);
+		new Rectangle(15, 25, 250, 350);
+		new Rectangle(20, 30, 300, 400);
+		// console.log(Rectangle.counter);
+		console.log(Rectangle.getCounter());
+</script>
 </head>
 
 <body>
