--- a/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_10.html
+++ b/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_10.html
@@ -18,15 +18,27 @@
 			getW() {
 				return this._w;
 			}
-			setH(dimen) {
-				if (this.checkDimen(dimen)) this._h = dimen;
-			}
-			setW(dimen) {
-				if (this.checkDimen(dimen)) this._w = dimen;
-			}
-			checkDimen(dimen) {
-				if (dimen < 0) throw new Error('Отрицательные размеры не поддерживаются');
-				return true;
+			// setH(dimen) {
+			// 	if (this.checkDimen(dimen)) this._h = dimen;
+			// }
+			// setW(dimen) {
+			// 	if (this.checkDimen(dimen)) this._w = dimen;
+			// }
+			// checkDimen(dimen) {
+			// 	if (dimen < 0) throw new Error('Отрицательные размеры не поддерживаются');
+			// 	return true;
+			// }
+
+				setH(h){
+					if (this.check(h)) this._h = h;
+				}
+
+				setW(w){
+					if (this.check(w)) this._w = w;
+				}
+
+			check(data) {
+				return data > 0;
 			}
 		}
 
@@ -34,20 +46,23 @@
 		console.log(r.getH());
 		console.log(r.getW());
 
-		try{
-			r.setH(-25);
-		} catch (e) {
-			console.log(e);
-		} 
+		// try{
+		// 	r.setH(-25);
+		// } catch (e) {
+		// 	console.log(e);
+		// }
 
-		try{
-			r.setW(55);
-		} catch (e) {
-			console.log(e);
-		} 
+		// try{
+		// 	r.setW(55);
+		// } catch (e) {
+		// 	console.log(e);
+		// }
+		// console.log(r.getH());
+		// console.log(r.getW());
+		r.setH(-25);
 		console.log(r.getH());
+		r.setW(55);
 		console.log(r.getW());
-
 	</script>
 </head>
 
