--- a/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_11.html
+++ b/homework.local/3. д.з Объектно-ориентированное программирование на JavaScript/homework_3_11.html
@@ -18,38 +18,50 @@
 		}
 
 		let r = new Rectangle(10, 20, 30, 40);
-		let descriptorX = Object.getOwnPropertyDescriptor(r, 'x');
-		let descriptorY = Object.getOwnPropertyDescriptor(r, 'y');
-		let descriptorW = Object.getOwnPropertyDescriptor(r, 'w');
-		let descriptorH = Object.getOwnPropertyDescriptor(r, 'h');
-		console.log(descriptorX);
-		console.log(descriptorY);
-		console.log(descriptorW);
-		console.log(descriptorH);
+		// let descriptorX = Object.getOwnPropertyDescriptor(r, 'x');
+		// let descriptorY = Object.getOwnPropertyDescriptor(r, 'y');
+		// let descriptorW = Object.getOwnPropertyDescriptor(r, 'w');
+		// let descriptorH = Object.getOwnPropertyDescriptor(r, 'h');
+		// console.log(descriptorX);
+		// console.log(descriptorY);
+		// console.log(descriptorW);
+		// console.log(descriptorH);
 
-		Object.defineProperty(r, 'x', {
-			writable: false,// свойство x доступно только для чтения, если true то свойство можно менять /запрет на запись
-			configurable: false // запрет на удаление
-		});
-		Object.defineProperty(r, 'y', {
-			writable: false, configurable: false
-		});
-		Object.defineProperty(r, 'w', {
-			writable: false, configurable: false
-		});
-		Object.defineProperty(r, 'h', {
-			writable: false, configurable: false
-		});
+		// Object.defineProperty(r, 'x', {
+		// 	writable: false,// свойство x доступно только для чтения, если true то свойство можно менять /запрет на запись
+		// 	configurable: false // запрет на удаление
+		// });
+		// Object.defineProperty(r, 'y', {
+		// 	writable: false, configurable: false
+		// });
+		// Object.defineProperty(r, 'w', {
+		// 	writable: false, configurable: false
+		// });
+		// Object.defineProperty(r, 'h', {
+		// 	writable: false, configurable: false
+		// });
 	
-		// r.x = 15;
-		// r.y = 15;
-		// r.w = 15;
-		// r.h = 15;
+		// // r.x = 15;
+		// // r.y = 15;
+		// // r.w = 15;
+		// // r.h = 15;
 
 			
-		// delete r.x;
+		// // delete r.x;
 	
-		console.log(r);
+	//	console.log(r);
+
+	//--------------------------------------
+	for(let field in r) {
+		 console.log(Object.getOwnPropertyDescriptor(r, field));
+		 Object.defineProperty(r, field, {
+			writable: false, 
+			enumerable: true,
+			configurable: false
+		 });
+	} 
+	// r.x = 20;
+	// delete r.h;
 	</script>
 </head>
 
