--- a/p5js YouTube/p5.js Tutorial/9_7_Drawing Object Trails/index.html
+++ b/p5js YouTube/p5.js Tutorial/9_7_Drawing Object Trails/index.html
@@ -11,6 +11,8 @@
 
   <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
 
+  <script language="javascript" type="text/javascript" src="js/particle.js "></script>
+
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style.
